test/types/typedefs/bradc/redefineTypeNames.good
redefineTypeNames.chpl:3: syntax error: near 'int'
redefineTypeNames.chpl:18: syntax error: near 'int'
